--- a/client/src/pages/Main/About/About.module.scss
+++ b/client/src/pages/Main/About/About.module.scss
@@ -28,7 +28,7 @@
 
 .about__certificate {
   display: inline-block;
-  width: auto;
+  width: max-content;
   max-height: 290px;
   cursor: pointer;
   margin-bottom: 42px;
